[package]
name = "chronicle"
version = "0.3.0"
authors = ["IOTA Stiftung"]
edition = "2018"
license = "APACHE 2.0"
homepage = "https://docs.iota.org/docs/chronicle/1.1/overview"
repository = "https://github.com/iotaledger/chronicle.rs"

[dependencies]
serde = { version = "1.0.114", features = ["derive"] }
serde_json = "1.0"
async-trait = "0.1.40"
env_logger = "0.7.1"
futures = "0.3"
tokio = { version = "0.3", features = ["time", "signal"] }

[dev-dependencies]
serde = { version = "1.0.114", features = ["derive"] }
tokio = { version = "0.3", features = ["full", "time", "signal"] }
log = "*"
env_logger = "0.7.1"
