[workspace]
members = [
    "chronicle",
    "chronicle-api",
    "chronicle-broker",
    "chronicle-storage",
    "chronicle-cli",
    "chronicle-common"
]
default-members = [
    "chronicle",
]

# `iota-crypto` uses bee-ternary. We patch it to use our local version to avoid importing it twice.
[patch.crates-io]
bee-ternary = { git = "https://github.com/iotaledger/bee.git", branch = "dev", optional = true }
