[package]
name = "chronicle-analytics"
version = "0.3.0"
authors = ["IOTA Stiftung"]
edition = "2021"


[lib]
name = "chronicle_analytics"
path = "src/lib.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chronicle-common = { path = "../chronicle-common" }
chronicle-storage = { path = "../chronicle-storage" }
tokio = { version = "1.15" }
futures = "0.3"
url = "2.2"
serde = "1.0"
serde_json = "1.0"
anyhow = "1.0"
regex = "1.5"
indicatif = "0.16"
glob = "0.3"
chrono = { version = "0.4", features = ["serde"] }
iota-crypto = "0.9.1"
csv = "1.1"
rand = "0.8"
datafusion = "7.0.0"
thiserror = "1.0"
arrow = "9.1.0"