[package]
name = "chronicle-api"
version = "0.3.0"
authors = ["IOTA Stiftung"]
edition = "2018"

[lib]
name = "chronicle_api"
path = "src/lib.rs"

[dependencies]
chronicle-common = { path = "../chronicle-common" }
chronicle-storage = { path = "../chronicle-storage" }
chronicle-broker = { path = "../chronicle-broker", features = ["application", "sync", "analytic"] }
scylla-rs = { git = "https://github.com/iotaledger/scylla.rs", branch = "new-backstage" }
backstage = { git = "https://github.com/iotaledger/backstage", branch = "actor-refactor" }
bee-rest-api = { git = "https://github.com/iotaledger/bee.git", branch = "dev" }
bee-message = { git = "https://github.com/iotaledger/bee.git", branch = "dev", features = ["serde"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
async-trait = "0.1"
log = "0.4"
rocket = { version = "0.5.0-rc.1", optional = true }
hex = "0.4"
futures = "0.3"
anyhow = "1.0"
thiserror = "1.0"
bincode = "1.3"
tokio = "1.5"
tokio-tungstenite = "0.15"
url = "2.2"

[features]
default = ["rocket_listener"]
rocket_listener = ["rocket/json"]
