[package]
name = "chronicle-broker"
version = "0.3.0"
authors = ["IOTA Stiftung"]
edition = "2018"

[lib]
name = "chronicle_broker"
path = "src/lib.rs"

[dependencies]
chronicle-common = { path = "../chronicle-common", optional = true }
chronicle-storage = { path = "../chronicle-storage" }
chronicle-filter = { path = "../chronicle-filter", optional = true }
backstage = { git = "https://github.com/iotaledger/backstage.git", branch = "stable", optional = true }
scylla-rs = { git = "https://github.com/iotaledger/scylla.rs.git", branch = "backstage", optional = true }
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0", optional = true }
log = { version = "0.4", optional = true }
tokio-tungstenite = { version = "0.14", optional = true }
reqwest = { version = "0.11", features = ["json"], optional = true }
futures = { version = "0.3", optional = true }
async-trait = { version = "0.1", optional = true }
lru = { version = "0.6", optional = true }
rand = { version = "0.8", optional = true }
url = { version = "2.2", features = ["serde"] }
bee-common = { git = "https://github.com/iotaledger/bee.git", branch = "dev", optional = true }
bee-rest-api = { git = "https://github.com/iotaledger/bee.git", branch = "dev", optional = true }
bee-message = { git = "https://github.com/iotaledger/bee.git", branch = "dev", features = ["serde"] }
hex = { version = "0.4", optional = true }
anyhow = { version = "1.0", optional = true }
tokio = { version = "1.5", optional = true }
paho-mqtt = { version = "0.9", default-features = false, features = ["bundled"], optional = true }
thiserror = { version = "1.0", optional = true }
indicatif = { version = "0.16", optional = true }
glob = {version = "0.3", optional = true }

[features]
default = ["merge"]
sync = [
    "chronicle-common",
    "scylla-rs",
    "anyhow",
    "tokio/full",
]
merge = [
    "anyhow",
    "tokio/macros",
    "tokio/fs",
    "tokio/rt-multi-thread",
    "thiserror",
    "serde_json",
    "indicatif",
    "futures",
    "glob",
]
analytic = [
    "chronicle-common",
    "anyhow",
    "scylla-rs",
    "tokio/full",
    "futures",
]
application = [
    "chronicle-common",
    "chronicle-filter",
    "backstage",
    "scylla-rs",
    "serde_json",
    "log",
    "tokio-tungstenite",
    "reqwest",
    "futures",
    "async-trait",
    "lru",
    "rand",
    "bee-common",
    "bee-rest-api",
    "hex",
    "anyhow",
    "tokio/full",
    "paho-mqtt",
    "sync"
]
filter = ["chronicle-filter"]
