[package]
name = "chronicle-broker"
version = "0.3.0"
authors = ["IOTA Stiftung"]
edition = "2021"

[lib]
name = "chronicle_broker"
path = "src/lib.rs"

[dependencies]
chronicle-common = { path = "../chronicle-common", optional = true }
backstage = { git = "https://github.com/iotaledger/backstage.git", branch = "stable", optional = true, features = ["paho-mqtt", "prefabs"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0", optional = true }
log = { version = "0.4", optional = true }
reqwest = { version = "0.11", features = ["json"], optional = true }
futures = { version = "0.3", optional = true }
async-trait = { version = "0.1", optional = true }
lru = { version = "0.7", optional = true }
rand = { version = "0.8", optional = true }
url = { version = "2.2", features = ["serde"] }
maplit = "1.0.2"

bee-common = { git = "https://github.com/iotaledger/bee.git", branch = "mainnet-develop" }

hex = { version = "0.4", optional = true }
anyhow = { version = "1.0", optional = true }
tokio = { version = "1.15", optional = true }
thiserror = { version = "1.0" }
indicatif = { version = "0.16", optional = true }
glob = {version = "0.3", optional = true }
async-recursion = "1.0"
iota-crypto = "0.9.1"
chrono = "0.4.19"
pin-project-lite = "0.2.8"
packable = { version = "0.2", features = [ "io", "std", "usize" ] }
wildmatch = "2.1"
linked-hash-map = "0.5"

[features]
default = ["merge", "application"]
sync = [
    "chronicle-common",
    "anyhow",
    "tokio/full",
]
merge = [
    "anyhow",
    "chronicle-common",
    "tokio/macros",
    "tokio/fs",
    "tokio/rt-multi-thread",
    "serde_json",
    "indicatif",
    "futures",
    "glob",
]
analytic = [
    "chronicle-common",
    "anyhow",
    "tokio/full",
    "futures",
]
application = [
    "backstage/tungstenite",
    "serde_json",
    "log",
    "reqwest",
    "futures",
    "async-trait",
    "lru",
    "rand",
    "hex",
    "sync",
]
