[package]
name = "chronicli"
version = "0.3.0"
authors = ["IOTA Stiftung"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chronicle = { path = "../chronicle", default-features = false }
chronicle-common = { path = "../chronicle-common" }
chronicle-broker = { path = "../chronicle-broker", default-features = false }
scylla-rs = "0.1"
clap = { version = "2.33", features = ["yaml"] }
tokio = "1.5"
tokio-tungstenite = "0.14"
futures = "0.3"
url = "2.2"
serde = "1.0"
serde_json = "1.0"
anyhow = "1.0"
regex = "1.5"
indicatif = "0.16"
