[package]
name = "chronicli"
version = "0.3.0"
authors = ["IOTA Stiftung"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chronicle-common = { path = "../chronicle-common" }
chronicle-broker = { path = "../chronicle-broker", features = ["application"] }
chronicle-storage = { path = "../chronicle-storage" }
scylla-rs = { git = "https://github.com/iotaledger/scylla.rs.git", branch = "backstage" }
backstage = { git = "https://github.com/iotaledger/backstage.git", branch = "stable", features = ["prefabs"] }
clap = { version = "2.33", features = ["yaml"] }
tokio = { version = "1.15" }
tokio-tungstenite = "0.16"
futures = "0.3"
url = "2.2"
serde = "1.0"
serde_json = "1.0"
anyhow = "1.0"
regex = "1.5"
indicatif = "0.16"
dotenv = "0.15"
glob = "0.3"
chrono = { version = "0.4", features = ["serde"] }
iota-crypto = "0.9.1"
csv = "1.1"
rand = "0.8"