[package]
name = "chronicle-common"
version = "0.3.0"
authors = ["IOTA Stiftung"]
edition = "2021"

[lib]
name = "chronicle_common"
path = "src/lib.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
ron = "0.6"
reqwest = { version = "0.11", features = ["json"] }
log = "0.4"
url = { version = "2.2", features = ["serde"] }
rand = "0.8"
futures = "0.3.13"
prometheus = "0.12"
lazy_static = "1.4"
tokio = "1.5"
glob = "0.3"
anyhow = "1.0"
maplit = "1.0"

[dependencies.paho-mqtt]
version = "0.9"
default-features = false
features = [
    "bundled"
]
