[package]
name = "chronicle-common"
version = "0.4.0"
authors = ["IOTA Stiftung"]
edition = "2021"

[lib]
name = "chronicle_common"
path = "src/lib.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
ron = "0.7"
reqwest = { version = "0.11", features = ["json"] }
log = "0.4"
url = { version = "2.2", features = ["serde"] }
prometheus = "0.13"
lazy_static = "1.4"
tokio = "1.14"
anyhow = "1.0"
arc-swap = "1.5.0"
