[package]
name = "chronicle-common"
version = "0.4.0"
authors = ["IOTA Stiftung"]
edition = "2021"

[lib]
name = "chronicle_common"
path = "src/lib.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
ron = "0.7"
reqwest = { version = "0.11", features = ["json"] }
log = "0.4"
url = { version = "2.2", features = ["serde"] }
prometheus = "0.13"
lazy_static = "1.4"
tokio = "1.14"
anyhow = "1.0"
arc-swap = "1.5.0"
derive_more = "0.99"
hex = "0.4"
primitive-types = { version = "0.11", default-features = false, features = [ "serde" ] }
cfg-if = { version = "1.0", optional = true }
mongodb = { version = "2.1", optional = true }

pin-project-lite = "0.2.8"
futures = "0.3"

bee-tangle = { git = "https://github.com/iotaledger/bee.git", branch = "shimmer-develop", default-features = false }

bee-message-cpt2 = { git = "https://github.com/iotaledger/bee.git", branch = "mainnet-develop", default-features = false, features = ["serde"], package = "bee-message" }
bee-rest-api-cpt2 = { git = "https://github.com/iotaledger/bee.git", branch = "mainnet-develop", default-features = false, package="bee-rest-api" }

bee-message-shimmer = { git = "https://github.com/iotaledger/bee.git", branch = "shimmer-develop", default-features = false, features = ["std", "serde1"], package = "bee-message" }
bee-rest-api-shimmer = { git = "https://github.com/iotaledger/bee.git", branch = "shimmer-develop", default-features = false, package="bee-rest-api" }

[features]
mongo = ["mongodb", "cfg-if"]
