[package]
name = "chronicle-cql"
version = "0.2.0"
authors = ["IOTA Stiftung"]
edition = "2018"
license = "APACHE 2.0"
homepage = "https://docs.iota.org/docs/chronicle/1.1/overview"
repository = "https://github.com/iotaledger/chronicle.rs"

[dependencies]
rand = "0.7"
lz4 = "1.23"
snap = "1.0"

[dev-dependencies]
criterion = "0.3"

[[bench]]
name = "murmur3_benchmark"
harness = false
