[package]
name = "chronicle-example"
version = "0.1.0"
authors = ["Chronicle developers"]
edition = "2018"

[dependencies]
# essential
tokio = { version = "0.2", features = ["full"] }
chronicle-common = { path = "../chronicle-common" }
# apps
chronicle-storage = { path = "../chronicle-storage" }
chronicle-api = { path = "../chronicle-api" }
