[package]
name = "chronicle-filter"
version = "0.3.0"
authors = ["IOTA Stiftung"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chronicle-storage = { path = "../chronicle-storage" }
bee-message = { git = "https://github.com/iotaledger/bee.git", branch = "dev" }
wildmatch = "2.1.0"
async-trait = "0.1"
serde = { version = "1.0", features = ["derive"] }
anyhow = "1.0"
