[package]
name = "chronicle-node"
version = "0.2.1-alpha"
authors = ["IOTA Stiftung"]
edition = "2018"
license = "APACHE 2.0"
homepage = "https://docs.iota.org/docs/chronicle/1.1/overview"
repository = "https://github.com/iotaledger/chronicle.rs"

[dependencies]
tokio = { version = "0.2", features = ["full", "time"] }
chronicle-common = { path = "../chronicle-common" }
chronicle-storage = { path = "../chronicle-storage" }
chronicle-api = { path = "../chronicle-api", default-features = false }
chronicle-cql = { path = "../chronicle-cql" }
chronicle-broker = { path = "../chronicle-broker", default-features = false }
serde = { version = "1.0", features = ["derive"] }
structopt = "0.3"
toml = "0.5"
log = "0.4.8"

[features]
mainnet = ["chronicle-broker/mainnet","chronicle-api/mainnet"]
devnet = ["chronicle-broker/devnet","chronicle-api/devnet"]
comnet = ["chronicle-broker/comnet","chronicle-api/comnet"]
