[package]
name = "chronicle-storage"
version = "0.3.0"
authors = ["IOTA Stiftung"]
edition = "2018"

[lib]
name = "chronicle_storage"
path = "src/lib.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chronicle-common = { path = "../chronicle-common" }
scylla-rs = { git = "https://github.com/iotaledger/scylla.rs", branch = "backstage" }
bee-common = { git = "https://github.com/iotaledger/bee.git", branch = "dev" }
bee-message = { git = "https://github.com/iotaledger/bee.git", branch = "shimmer-develop", features = ["serde", "cpt2"] }
bee-tangle = { git = "https://github.com/iotaledger/bee.git", branch = "shimmer-develop" }
async-trait = "0.1"
serde = { version = "1.0", features = ["derive"] }
rand = "0.8"
anyhow = "1.0"
futures = { version = "0.3", optional = true }
tokio = { version = "1.15", optional = true }
pin-project-lite = "0.2.8"
packable = { version = "0.1", default-features = false, features = [ "serde", "primitive-types" ] }
chrono = "0.4"
primitive-types = { version = "0.11", default-features = false, features = [ "serde" ] }


[dev-dependencies]
bee-pow = { git = "https://github.com/iotaledger/bee.git", branch = "dev" }
tokio = { version = "1.15", features = ["macros", "signal"] }
log = "0.4"
futures = "0.3"
num_cpus = "1.13"

[features]
sync = [ "tokio/full" ]
analytic = [
    "futures",
    "tokio/full",
]
