[package]
name = "chronicle-storage"
version = "0.3.0"
authors = ["IOTA Stiftung"]
edition = "2021"

[lib]
name = "chronicle_storage"
path = "src/lib.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chronicle-common = { path = "../chronicle-common" }
scylla-rs = { git = "https://github.com/iotaledger/scylla.rs", branch = "backstage" }
bee-message = { git = "https://github.com/iotaledger/bee.git", branch = "shimmer-develop", default-features = false, features = ["std", "serde", "cpt2"] }
bee-tangle = { git = "https://github.com/iotaledger/bee.git", branch = "shimmer-develop", default-features = false }
bee-rest-api = { git = "https://github.com/iotaledger/bee.git", branch = "shimmer-develop", default-features = false, features = ["cpt2"] }
async-trait = "0.1"
serde = { version = "1.0", features = ["derive"] }
rand = "0.8"
anyhow = "1.0"
thiserror = "1.0"
futures = "0.3"
tokio = { version = "1.15", optional = true }
packable = { version = "0.2", features = [ "io", "std", "usize" ] }
chrono = "0.4"
primitive-types = { version = "0.11", default-features = false, features = [ "serde" ] }
derive_more = "0.99"

[dev-dependencies]
bee-pow = { git = "https://github.com/iotaledger/bee.git", branch = "dev" }
tokio = { version = "1.15", features = ["macros", "signal"] }
log = "0.4"
futures = "0.3"
num_cpus = "1.13"

[features]
sync = [ "tokio/full" ]
analytic = [ "tokio/full" ]
