[package]
name = "chronicle"
version = "0.3.0"
authors = ["IOTA Stiftung"]
edition = "2021"
license = "APACHE 2.0"
homepage = "https://docs.iota.org/docs/chronicle/1.1/overview"
repository = "https://github.com/iotaledger/scylla.rs"

[lib]
name = "chronicle"
path = "src/lib.rs"

[[bin]]
name = "chronicle"
path = "src/main.rs"
required-features = ["application"]

[dependencies]
backstage = "0.1"
scylla-rs = "0.1"
chronicle-common = { path = "../chronicle-common" }
chronicle-api = { path = "../chronicle-api" }
chronicle-storage = { path = "../chronicle-storage" }
chronicle-broker = { path = "../chronicle-broker", default-features = false }
serde = { version = "1.0", features = ["derive"] }
async-trait = "0.1"
env_logger = "0.8"
log = "0.4"
num_cpus = "1.13"
dotenv = "0.15"
futures = "0.3"
warp = "0.3"
serde_json = "1.0"
tokio-tungstenite = "0.14"
url = "2.2"
anyhow = "1.0"
tokio = "1.5"

[features]
default = ["rocket", "application"]
application = ["chronicle-broker/application"]
filter = ["chronicle-broker/filter"]
rocket = ["chronicle-api/rocket_listener"]
