[package]
name = "chronicle"
version = "0.3.0"
authors = ["IOTA Stiftung"]
edition = "2021"
license = "APACHE 2.0"
homepage = "https://docs.iota.org/docs/chronicle/1.1/overview"
repository = "https://github.com/iotaledger/scylla.rs"

[[bin]]
name = "chronicle"
path = "src/main.rs"
required-features = ["application"]

[dependencies]
backstage = { git = "https://github.com/iotaledger/backstage.git", branch = "stable", features= ["paho-mqtt", "ron_config", "tungstenite", "backserver"] }
chronicle-common = { path = "../chronicle-common" }
chronicle-api = { path = "../chronicle-api" }
chronicle-broker = { path = "../chronicle-broker", default-features = false }
permanode-mongo = { path = "../chronicle-storage/permanode-mongo", optional = true }
serde = { version = "1.0", features = ["derive"] }
async-trait = "0.1"
env_logger = "0.9"
log = "0.4"
num_cpus = "1.13"
dotenv = "0.15"
futures = "0.3"
serde_json = "1.0"
url = "2.2"
anyhow = "1.0"
tokio = "1.15"

[features]
default = ["application"]
application = ["chronicle-broker/application"]
null = []
mongo = ["chronicle-common/mongo", "permanode-mongo"]
#rocket = ["chronicle-api/rocket_listener"]
