[package]
name = "examples"
version = "0.0.0"
publish = false
authors = ["IOTA Stiftung"]
edition = "2018"
license = "APACHE 2.0"
homepage = "https://docs.iota.org/docs/chronicle/1.0/overview"
repository = "https://github.com/iotaledger/chronicle.rs"

[workspace]


[dependencies]
# essential
tokio = { version = "0.2", features = ["full"] }
chronicle-common = { path = "../chronicle-common" }
# apps
chronicle-storage = { path = "../chronicle-storage" }
chronicle-api = { path = "../chronicle-api" }
chronicle-cql = {path = "../chronicle-cql"}
chronicle-broker = { path = "../chronicle-broker" }

[[example]]
name = "storage"
path = "storage/main.rs"

[[example]]
name = "broker"
path = "broker/main.rs"
