[package]
name = "examples"
version = "0.0.0"
publish = false
authors = ["IOTA Stiftung"]
edition = "2018"
license = "APACHE 2.0"
homepage = "https://docs.iota.org/docs/chronicle/1.1/overview"
repository = "https://github.com/iotaledger/chronicle.rs"

[workspace]


[dependencies]
tokio = { version = "0.2", features = ["full"] }
chronicle-common = { path = "../chronicle-common" }
chronicle-storage = { path = "../chronicle-storage" }
chronicle-api = { path = "../chronicle-api" }
chronicle-cql = {path = "../chronicle-cql"}
chronicle-broker = { path = "../chronicle-broker" }
serde = { version = "1.0", features = ["derive"] }
structopt = "0.3"
toml = "0.5"
log = "0.4.8"

[[example]]
name = "storage"
path = "storage/main.rs"

[[example]]
name = "broker"
path = "broker/main.rs"

[[example]]
name = "permanode"
path = "permanode/main.rs"

[features]
default = []
mainnet = ["chronicle-broker/mainnet"]
devnet = ["chronicle-broker/devnet"]
comnet = ["chronicle-broker/comnet"]
