[package]
name = "examples"
version = "0.0.0"
publish = false
edition = "2018"

[dev-dependencies]
serde = { version = "1.0.114", features = ["derive"] }
chronicle = {path = "../"}
tokio = { version = "0.3", features = ["full", "time", "signal"] }
futures = "0.3"
env_logger = "0.7.1"
log = "*"
async-trait = "0.1.40"
serde_json = "1.0"

[[example]]
name = "hello_world"
path = "hello_world.rs"

[[example]]
name = "two_apps"
path = "two_apps.rs"
