[package]
name = "permanode-api"
version = "0.1.0"
authors = ["Alex Coats <alexandcoats@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chronicle = { git = "https://github.com/iotaledger/chronicle.rs.git", branch = "framework"}
scylla = { git = "https://github.com/iotaledger/scylla.rs.git", branch = "scylla" }
serde = { version = "1.0", features = ["derive"] }
async-trait = "0.1.42"
env_logger = "0.8.3"
log = "0.4.14"

[dependencies.tokio]
version = "1.0"
default-features = false
features = [
    "io-std",
    "fs", 
    "macros", 
    "sync", 
    "net", 
    "io-util", 
    "time", 
    "rt-multi-thread",
    "signal", 
    "full"
] 