[package]
name = "permanode-api"
version = "0.1.0"
authors = ["Alex Coats <alexandcoats@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
scylla = { git = "https://github.com/iotaledger/scylla.rs.git", branch = "scylla" }
scylla-cql = { git = "https://github.com/iotaledger/scylla.rs.git", branch = "scylla" }
chronicle = { git = "https://github.com/iotaledger/chronicle.rs.git", branch = "framework"}
bee-common = { git = "https://github.com/iotaledger/bee.git", branch = "dev" }
permanode-storage = { path = "../permanode-storage" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.62"
async-trait = "0.1.42"
env_logger = "0.8.3"
log = "0.4.14"
http = "0.2.3"
rocket = { git = "https://github.com/SergioBenitez/Rocket.git", rev = "e4c2324" }
rand = "0.8.3"
warp = "0.3.0"
hex = "0.4.2"

[dependencies.tokio]
version = "1.0"
default-features = false
features = [
    "io-std",
    "fs", 
    "macros", 
    "sync", 
    "net", 
    "io-util", 
    "time", 
    "rt-multi-thread",
    "signal", 
    "full"
]