[package]
name = "permanode-api"
version = "0.1.0"
authors = ["Alex Coats <alexandcoats@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
permanode-common = { path = "../permanode-common" }
permanode-storage = { path = "../permanode-storage" }
scylla = { git = "https://github.com/iotaledger/scylla.rs.git", branch = "scylla" }
scylla-cql = { git = "https://github.com/iotaledger/scylla.rs.git", branch = "scylla" }
chronicle = { git = "https://github.com/iotaledger/chronicle.rs.git", branch = "framework"}
bee-common = { git = "https://github.com/iotaledger/bee.git", branch = "dev" }
bee-rest-api = { git = "https://github.com/iotaledger/bee.git", rev = "edb1541" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.62"
serde_repr = "0.1"
async-trait = "0.1.42"
env_logger = "0.8.3"
log = "0.4.14"
http = "0.2.3"
rocket = { git = "https://github.com/SergioBenitez/Rocket.git", rev = "e4c2324", optional = true }
rand = "0.8.3"
hex = "0.4.2"
futures = "0.3"
bincode = "1.3.2"
anyhow = "1.0.38"
thiserror = "1.0.24"

[dependencies.iota-crypto]
git = "https://github.com/iotaledger/crypto.rs"
rev = "c3bf565"
features = ["ed25519", "blake2b"]

[dependencies.rocket_contrib]
git = "https://github.com/SergioBenitez/Rocket.git"
rev = "e4c2324"
default-features = false
optional = true
features = ["json"]

[dependencies.tokio]
version = "1.4"
default-features = false
features = [
    "io-std",
    "fs",
    "macros",
    "sync",
    "net",
    "io-util",
    "time",
    "rt-multi-thread",
    "signal",
    "full"
]

[features]
default = ["rocket_listener"]
rocket_listener = ["rocket", "rocket_contrib/json"]
