[package]
name = "permanode-broker"
version = "0.1.0"
authors = ["IOTA Stiftung"]
edition = "2018"

[dependencies]
chronicle = { git = "https://github.com/iotaledger/chronicle.rs.git", branch = "framework"}
scylla = { git = "https://github.com/iotaledger/scylla.rs.git", branch = "scylla" }
scylla-cql = { git = "https://github.com/iotaledger/scylla.rs.git", branch = "scylla" }
permanode-storage = { path = "../permanode-storage" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
log = "0.4.14"
tokio-tungstenite = "0.13.0"
reqwest = "0.11.2"
futures = "0.3"
async-trait = "*"
lru = "0.6.5"
url = { version = "2", features = ["serde"] }
bee-common = { git = "https://github.com/iotaledger/bee.git", branch = "dev" }
bee-tangle = { git = "https://github.com/iotaledger/bee.git", rev = "edb1541" }
permanode-filter = { path = "../permanode-filter", optional = true }

[dependencies.tokio]
version = "1.2"
default-features = false
features = [
    "io-std",
    "fs",
    "macros",
    "sync",
    "net",
    "io-util",
    "time",
    "rt-multi-thread",
    "signal",
    "full"
]

[dependencies.paho-mqtt]
version = "0.9.1"
default-features = false
features = [
    "bundled"
]

[dependencies.bee-message]
git = "https://github.com/iotaledger/bee.git"
rev = "edb1541"
features = [
    "serde"
]

[features]
filter = ["permanode-filter"]
