[package]
name = "permanode-broker"
version = "0.1.0"
authors = ["IOTA Stiftung"]
edition = "2018"

[lib]
name = "permanode_broker"
path = "src/lib.rs"

[dependencies]
permanode-common = { path = "../permanode-common" }
permanode-storage = { path = "../permanode-storage" }
chronicle = { git = "https://github.com/iotaledger/chronicle.rs.git", branch = "framework"}
scylla = { git = "https://github.com/iotaledger/scylla.rs.git", branch = "error-handling" }
scylla-cql = { git = "https://github.com/iotaledger/scylla.rs.git", branch = "error-handling" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
log = "0.4.14"
tokio-tungstenite = "0.13.0"
reqwest = { version = "0.11", features = ["json"] }
futures = "0.3"
async-trait = "*"
lru = "0.6.5"
rand = "0.8"
url = { version = "2", features = ["serde"] }
bee-common = { git = "https://github.com/iotaledger/bee.git", branch = "dev" }
bee-tangle = { git = "https://github.com/iotaledger/bee.git", rev = "77de10c" }
bee-rest-api = { git = "https://github.com/iotaledger/bee.git", rev = "77de10c" }
permanode-filter = { path = "../permanode-filter", optional = true }
bincode = "1.3.2"
anyhow = "1.0"

[dependencies.tokio]
version = "1.2"
default-features = false
features = [
    "io-std",
    "fs",
    "macros",
    "sync",
    "net",
    "io-util",
    "time",
    "rt-multi-thread",
    "signal",
    "full"
]

[dependencies.paho-mqtt]
version = "0.9.1"
default-features = false
features = [
    "bundled"
]

[dependencies.bee-message]
git = "https://github.com/iotaledger/bee.git"
rev = "77de10c"
features = [
    "serde"
]

[features]
filter = ["permanode-filter"]
