[package]
name = "chronicli"
version = "0.1.0"
authors = ["IOTA Stiftung"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
permanode-common = { path = "../permanode-common" }
clap = { version = "2.33.3", features = ["yaml"] }
