[package]
name = "chronicli"
version = "0.1.0"
authors = ["IOTA Stiftung"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
permanode-common = { path = "../permanode-common" }
permanode-broker = { path = "../permanode-broker" }
scylla = { git = "https://github.com/iotaledger/scylla.rs.git", branch = "scylla" }
clap = { version = "2.33.3", features = ["yaml"] }
tokio = "1.2.0"
tokio-tungstenite = "0.13.0"
futures = "0.3.13"
url = "2.2.1"
serde_json = "1.0.63"