[package]
name = "chronicli"
version = "0.1.0"
authors = ["IOTA Stiftung"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
permanode = { path = "../permanode" }
permanode-common = { path = "../permanode-common" }
permanode-broker = { path = "../permanode-broker" }
scylla = { git = "https://github.com/iotaledger/scylla.rs.git", branch = "error-handling" }
clap = { version = "2.33", features = ["yaml"] }
tokio = "1.2"
tokio-tungstenite = "0.14"
futures = "0.3"
url = "2.2"
serde_json = "1.0"
anyhow = "1.0"